tema-9/leccion-6/pods.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    role: frontend
---
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: frontend
  labels:
    app: web
spec:
  containers:
    - name: web
      image: nginx

---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    role: backend
---
apiVersion: v1
kind: Pod
metadata:
  name: api
  namespace: backend
  labels:
    app: api
spec:
  containers:
    - name: api
      image: nginx

---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: test
  labels:
    app: test
spec:
  containers:
    - name: test
      image: nginx
